--- a/bookmark-landing-page-master/index.html
+++ b/bookmark-landing-page-master/index.html
@@ -31,6 +31,101 @@
           text-align: left;
         }
       }
+      @media screen and (min-width:800px){
+        nav li{
+          display: block;
+        }
+        nav .ham{
+          display: none;
+        }
+        .cont1 .contText h1{
+font-size: 4rem;
+font-weight: 500;
+margin-top: 5rem;
+        }
+        .cont2 ul{
+          display: flex;
+          border-top: 1px solid var(--grblue);
+          border-bottom: 1px solid var(--grblue);
+          max-width: 600px;
+          margin: auto;
+        }
+        .cont2 li{
+          border: none;
+        }
+        .more-info{
+          display: block;
+          /* margin: auto; */
+          width: 140px;
+          margin-top: 2rem;
+        }
+        .cont2 .makeFlex{
+          display: grid;
+          grid-template-columns: 50% 50%;
+        }
+        .cont2 .contText{
+          display: flex;
+          flex-direction: column;
+          /* align-items: center; */
+          justify-content: center;
+          /* font-size: 3rem; */
+          /* background-color: red; */
+        }
+        .cont2 .contText h2, .cont2 .contText p{
+          text-align: left;
+          /* width: 70%; */
+        }
+        .cont3 .contText p{
+          width: 400px;
+          margin: auto;
+        }
+        .cont3 .contCard{
+          /* background-color: red; */
+          display: grid;
+          column-gap: 1rem;
+          grid-template-columns: auto auto auto;
+        }
+        .cont3 .card:hover{
+          transition: all 0.3s;
+          transform: translateY(-1rem);
+          transition-timing-function: ease-in-out;
+        }
+        #card2{
+          margin-top: 6rem;
+        }
+        #card3{
+          margin-top: 10rem;
+        }
+        .cont-email input{
+          width: fit-content;
+          text-align: left;
+          display: inline;
+        }
+        .cont-email button{
+          /* background-color: green; */
+          width: fit-content;
+          margin-left: 1rem;
+        }
+        footer {
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+        }
+        footer ul{
+          display: flex;
+        }
+        footer .logos{
+          /* background-color: black; */
+          margin: 0;
+        }
+        footer li:hover{
+          cursor: pointer;
+          color: var(--sfred);
+        }
+        footer .logos:hover{
+          cursor: pointer;
+        }
+      }
     </style>
   </head>
   <body>
@@ -90,7 +185,7 @@
           </li>
         </ul>
       </div>
-      <div class="featuresDisp">
+      <div class="makeFlex"><div class="featuresDisp">
         <div class="sideImg">
           <div class="wrapper">
             <div class="box"></div>
@@ -106,7 +201,7 @@
         </p>
         <button class="more-info"><p>More Info</p></button>
       </div>
-    </div>
+    </div></div>
     <div class="cont3">
       <div class="contText">
         <h2>Download the extension</h2>
@@ -116,21 +211,21 @@
         </p>
       </div>
       <div class="contCard">
-        <div class="card">
+        <div class="card" id="card1">
           <img src="images/logo-chrome.svg" alt="">
           <h2>Add to Chrome</h2>
           <p>Minimum version 62</p>
           <img src="images/bg-dots.svg" class="bg-dots"  alt="">
           <button class="card-btns">Add & Install Extension</button>
         </div>
-        <div class="card">
+        <div class="card" id="card2">
           <img src="images/logo-firefox.svg" alt="">
           <h2>Add to Firefox</h2>
           <p>Minimum version 55</p>
           <img src="images/bg-dots.svg"  class="bg-dots" alt="">
           <button class="card-btns">Add & Install Extension</button>
         </div>
-        <div class="card">
+        <div class="card" id="card3">
           <img src="images/logo-opera.svg" alt="">
           <h2>Add to Opera</h2>
           <p>Minimum version 46</p>
