just a little humour sprinkled

--- a/bookmark-landing-page-master/index.html
+++ b/bookmark-landing-page-master/index.html
@@ -408,6 +408,10 @@ margin-top: 5rem;
           }
           else{}
         }
+        let rizzButt=document.querySelector(".cont-email button");
+        rizzButt.addEventListener("click",function(){
+          window.alert("YOU GOT NEGATIVE RIZZ 💀");
+        })
     </script>
   </body>
 </html>
