--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -20,6 +20,16 @@
     <style></style>
   </head>
   <body>
+    <div class="mobilemenu">
+      <img src="images/icon-close.svg" alt="icon-close" id="cross">
+      <ul>
+        <li>Collections</li>
+        <li>Men</li>
+        <li>Women</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </div>
     <nav>
       <div class="logoAndMenu">
         <img src="images/icon-menu.svg" alt="icon-menu" id="menuLogo" />
@@ -33,15 +43,32 @@
         </ul>
       </div>
       <div class="cartAndPfp">
+        <p id="amount"><span></span></p>
         <img src="images/icon-cart.svg" alt="icon-cart" id="cart" />
         <img src="images/image-avatar.png" alt="image-avatar" id="pfp" />
       </div>
     </nav>
+    <div class="cartInfo">
+      <h4>Cart</h4>
+      <hr>
+      <div class="info">
+        <div id="cartisempty"><p>Cart is empty</p></div>
+        <div id="detail">
+          <img src="images/image-product-1-thumbnail.jpg" alt="image-product-1-thumbnail" id="thumbnail">
+          <div class="ptags">
+            <p>Fall limited edition sneakers</p>
+            <p id="price">$125.00 x <span></span></p>
+            <img src="images/icon-delete.svg" alt="icon-delete" id="delete">
+          </div>
+        </div>
+        <button><p>Checkout</p></button>
+      </div>
+    </div>
     <main>
       <div class="imgcont">
         <img src="images/icon-previous.svg" alt="icon-previous" id="previous" />
         <img src="images/icon-next.svg" alt="next" id="next" />
-        <img src="images/image-product-1.jpg" alt="" id="shoes">
+        <img src="images/image-product-1.jpg" alt="" id="shoes" />
       </div>
       <div class="textcont">
         <h2>sneaker company</h2>
@@ -56,10 +83,21 @@
           ><span id="cutPrice"><del>$250.00</del></span>
         </p>
         <div class="amountButton">
-          <img src="images/icon-plus.svg" alt="" id="plus">
-          <img src="images/icon-minus.svg" alt="" id="minus">
-          <span>0</span></div>
-        <button><p>Add to cart</p></button>
+          <img src="images/icon-plus.svg" alt="" id="plus" />
+          <img src="images/icon-minus.svg" alt="" id="minus" />
+          <span>0</span>
+        </div>
+        <button>
+          <svg width="22" height="20" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z"
+              fill="white"
+              fill-rule="nonzero"
+            />
+          </svg>
+          <!-- <img src="images/icon-cart.svg" alt="icon-cart" id="cart"> -->
+          <p>Add to cart</p>
+        </button>
       </div>
     </main>
     <script src="script.js"></script>
