--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -17,11 +17,108 @@
       href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <style></style>
+    <style>
+      @media screen and (min-width:1000px) {
+        /* body{
+          background-color: green;
+        } */
+        #menuLogo {
+          display: none;
+        }
+        nav {
+          padding-block: 1.5rem;
+        }
+        nav #list {
+          display: flex;
+        }
+        nav #list li:hover {
+          cursor: pointer;
+          color: black;
+          font-weight: 700;
+          position: relative;
+        }
+        nav #list li:hover::after {
+          content: " ";
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+          bottom: 0;
+          width: 100%;
+          height: 3px;
+          background-color: var(--orange);
+        }
+        nav #pfp {
+          width: 50px;
+        }
+        nav #pfp:hover {
+          border: 3px solid var(--orange);
+          border-radius: 50%;
+        }
+        .cartAndPfp #amount {
+          top: 0.3rem;
+        }
+        .cartInfo {
+          position: absolute;
+          left: auto;
+          right: 2rem;
+          transform: none;
+        }
+        main {
+          display: flex;
+          margin-top: 2rem;
+          padding-inline: 1rem;
+        }
+        main .imgcont {
+          width: 50%;
+          min-width: 500px;
+        }
+        main .textcont {
+          padding: 2rem;
+        }
+        main .textcont > h1 {
+          font-size: 3rem;
+          margin-bottom: 3rem;
+          margin-top: 1.5rem;
+        }
+        main #detail {
+          font-size: 1rem !important;
+          letter-spacing: 2px;
+          line-height: 1.8rem;
+        }
+        #previous,
+        #next {
+          display: none;
+        }
+      #cutPrice {
+        /* background-color: hotpink; */
+        bottom: -1.5rem;
+        left: 0;
+      }
+      .amountButton {
+        width: 30%;
+        display: inline-block;
+      }
+      .textcont > button {
+        display: inline;
+        width: 60%;
+        margin-left: 1rem;
+      }
+      .thumbnails{
+        display: flex;
+        justify-content: space-around;
+        margin-top: 2rem;
+      }
+      #shoes{
+        width: 500px;
+        margin: auto;
+        display: block;
+      }
+      }
+    </style>
   </head>
   <body>
     <div class="mobilemenu">
-      <img src="images/icon-close.svg" alt="icon-close" id="cross">
+      <img src="images/icon-close.svg" alt="icon-close" id="cross" />
       <ul>
         <li>Collections</li>
         <li>Men</li>
@@ -50,15 +147,19 @@
     </nav>
     <div class="cartInfo">
       <h4>Cart</h4>
-      <hr>
+      <hr />
       <div class="info">
         <div id="cartisempty"><p>Cart is empty</p></div>
         <div id="detail">
-          <img src="images/image-product-1-thumbnail.jpg" alt="image-product-1-thumbnail" id="thumbnail">
+          <img
+            src="images/image-product-1-thumbnail.jpg"
+            alt="image-product-1-thumbnail"
+            id="thumbnail"
+          />
           <div class="ptags">
             <p>Fall limited edition sneakers</p>
             <p id="price">$125.00 x <span></span></p>
-            <img src="images/icon-delete.svg" alt="icon-delete" id="delete">
+            <img src="images/icon-delete.svg" alt="icon-delete" id="delete" />
           </div>
         </div>
         <button><p>Checkout</p></button>
@@ -69,6 +170,17 @@
         <img src="images/icon-previous.svg" alt="icon-previous" id="previous" />
         <img src="images/icon-next.svg" alt="next" id="next" />
         <img src="images/image-product-1.jpg" alt="" id="shoes" />
+        <div class="thumbnails">
+          <img src="images/image-product-1-thumbnail.jpg" alt="" id="tb1" /><img
+            src="images/image-product-2-thumbnail.jpg"
+            alt=""
+            id="tb2"
+          /><img
+            src="images/image-product-3-thumbnail.jpg"
+            alt=""
+            id="tb3"
+          /><img src="images/image-product-4-thumbnail.jpg" alt="" id="tb4" />
+        </div>
       </div>
       <div class="textcont">
         <h2>sneaker company</h2>
